--- a/index.html
+++ b/index.html
@@ -1,24 +1,23 @@
-.image{width:200px;
-height:150px;
-border-radius: 25px;
-border: 5px solid black;margin: 10px;
-
-}
-.main{display:flex;
-    text-align: center;
-    background: rgb(156, 48, 84) ;
-    width:500px;height:200px;
-    padding: 20px;
-    margin:350px auto;
-    
-     justify-content:  space-around;
-     border-radius:20px;
-}
-.main2{padding: none;margin-bottom: 10px;
+<DOCTYPE html!>
+    <html><head♠>
+        <link rel="stylesheet" href="buisness.css">
+    </head>
+    <body class="body">
+        <div class="main dotted">
+       
+       <img  class="image " src="/web dev/flag/zakiiii.jpg" alt="zaki grabbing a medaillon">
+      <div class="main2 dotted" ><p> <h1>ammar zakaria  buisness card
+       </h1>
    
-}
-.body{margin:100px; font-family: Verdana, Geneva, Tahoma, sans-serif; 
-}
-.dotted{border: 5px dotted black}
-.list{margin-bottom: 100px;
-}
+      <div class="list"> <ul>
+            <li>ensia student</li> 
+            <li>bac:18.40</li> 
+            <li>athlete</li> 
+       </ul></div>
+       </p></div>
+
+        </div>
+
+    </body>
+    </html>
+
